@@ -1,3 +1,10 @@
+2010-08-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/filetypes.c:
+   Fix segfault on Tools->Reload Configuration when no documents are
+   open (#3037079).
+
+
 2010-08-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * wscript:
